first clean on DAO
